# Rocket

./: CHANGELOG.md
contrib/lib/: Cargo.toml
contrib/lib/src/: databases.rs  json.rs  lib.rs  msgpack.rs  serve.rs  uuid.rs
contrib/lib/src/templates/: mod.rs
contrib/lib/tests/: helmet.rs  static_files.rs
core/codegen/: Cargo.toml
core/codegen/src/: lib.rs
core/codegen/src/attribute/: catch.rs  route.rs
core/codegen/src/derive/: from_form_value.rs  responder.rs
core/codegen/tests/: compile-test.rs
core/codegen/tests/ui-fail/: catch_type_errors.stderr  responder-types.stderr  typed-uri-bad-type.rs  typed-uri-bad-type.stderr
core/http/: Cargo.toml
core/http/src/: accept.rs  cookies.rs  hyper.rs  listener.rs  tls.rs
core/http/src/uri/: from_uri_param.rs  origin.rs  uri_display.rs
core/lib/: Cargo.toml
core/lib/benches/: format-routing.rs  ranked-routing.rs  simple-routing.rs
core/lib/src/: catcher.rs  error.rs  ext.rs  lib.rs  logger.rs  outcome.rs  rocket.rs
core/lib/src/config/: config.rs  mod.rs
core/lib/tests/: head_handling.rs
examples/content_types/: Cargo.toml
examples/form_validation/src/: tests.rs
examples/handlebars_templates/src/: main.rs
examples/manual_routes/: Cargo.toml
examples/query_params/src/: main.rs  tests.rs
examples/stream/: Cargo.toml
examples/stream/src/: main.rs
examples/todo/src/: main.rs  tests.rs
scripts/: test.sh
site/guide/: 10-pastebin.md  2-getting-started.md  3-overview.md  4-requests.md  5-responses.md  6-state.md  7-fairings.md  8-testing.md  9-configuration.md
(+19 files in other folders)
