[package]
name = "rocket_http"
version = "0.5.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = """
Types, traits, and parsers for HTTP requests, responses, and headers.
"""
documentation = "https://api.rocket.rs/v0.5/rocket_http/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "web", "framework", "http"]
license = "MIT/Apache-2.0"
categories = ["web-programming"]
edition = "2018"

[features]
default = []
tls = ["tokio-rustls"]
private-cookies = ["cookie/secure"]

[dependencies]
smallvec = "0.6"
percent-encoding = "1"
hyper = { version = "0.12.31", default-features = false, features = ["tokio"] }
http = "0.1.17"
mime = "0.3.13"
time = "0.1"
indexmap = "1.0"
state = "0.4"
tokio-rustls = { version = "0.9.2", optional = true }
cookie = { version = "0.12", features = ["percent-encode"] }
pear = "0.1"
unicode-xid = "0.1"

[dev-dependencies]
rocket = { version = "0.5.0-dev", path = "../lib" }
